# conuhacks8

.github/workflows/: backend.yml  frontend.yml
backend/: Cargo.toml  Dockerfile  algorithm.md  compose.yaml  new_datafile.csv
backend/src/: api_doc.rs  lib.rs  main.rs  reservation.rs  reservations.rs  state.rs
backend/src/algorithm/: builder.rs  day.rs  light_schedule.rs  mod.rs
backend/src/data/: mod.rs  reservation.rs  reservations.rs  vehicle.rs
backend/src/data/time/: date.rs  duration.rs  mod.rs
backend/src/route/: day.rs  mod.rs  routes.rs  upload.rs
backend/src/schedule/: builder.rs  day.rs  day_info.rs  mod.rs  slot.rs  year.rs
frontend/: .gitignore  Dockerfile  app.vue  compose.yaml  flake.nix  nuxt.config.ts  package-lock.json
frontend/assets/css/: main.css
frontend/assets/style/: constants.scss
frontend/components/: app-footer.vue  app-header.vue  autoadmin-logo.vue  box.vue  button.vue  calendar-icon.vue  car-icon.vue  car-timeline.vue  date-selector.vue  devpost-logo.vue  edit-card.vue  expand-less.vue  expand-more.vue  footer.vue  garage-icon.vue  github-logo.vue  headerComponent.vue  multiple-value-box.vue  settings-icon.vue  single-value-box.vue  timeline-element.vue  truck-icon.vue  upload-button.vue  upload-icon.vue  vehicle-type-card.vue
frontend/layouts/: default.vue
frontend/pages/: about.vue  dashboard.vue  edit.vue  garage.vue  home.vue  index.vue
frontend/pages/dashboard/: [date].vue
frontend/pages/garage/: [date].vue
